[package]
name = "minimuxer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusty_libimobiledevice = { version = "0.1", features = ["dynamic"], default-features = false }
plist_plus = { version = "0.2", features = ["dynamic"] }
plist = "1"
swift-bridge = { git = "https://github.com/naturecodevoid/swift-bridge.git", branch = "derive-debug-enum" } #"0.1"

log = "*"
simplelog = "0.12"

serde = "1.0"
serde_json = "1.0"

reqwest = { version = "0.11", features = ["blocking"] }
zip = "0.6"
chrono = "0.4"

[build-dependencies]
swift-bridge-build = { git = "https://github.com/naturecodevoid/swift-bridge.git", branch = "derive-debug-enum" } #"0.1"

[profile.release]
panic = "abort"

[lib]
crate-type = ["staticlib", "rlib"]
