[package]
name = "minimuxer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusty_libimobiledevice = { version = "0.1", features = ["dynamic"], default-features = false }
plist_plus = { version = "0.2", features = ["dynamic"] }
plist = "1"
swift-bridge = { git = "https://github.com/naturecodevoid/swift-bridge" } # TODO: change to official repo once https://github.com/chinedufn/swift-bridge/pull/209 is merged

log = "*"
simplelog = "0.12"

serde = "1.0"
serde_json = "1.0"

# apple-codesign-wrapper = { git = "https://github.com/SideStore/apple-private-apis" }
# p12 = "0.6"
# der = { version = "0.7", features = ["pem"] }

reqwest = { version = "0.11", features = ["blocking"] }
zip = "0.6"
chrono = "0.4"

[build-dependencies]
swift-bridge-build = { git = "https://github.com/naturecodevoid/swift-bridge" } # TODO: change to official repo once https://github.com/chinedufn/swift-bridge/pull/209 is merged

[profile.release]
panic = "abort"

[lib]
crate-type = ["staticlib", "rlib"]
