[package]
name = "minimuxer"
version = "0.1.0"
edition = "2021"

[dependencies]
rusty_libimobiledevice = { git = "https://github.com/SideStore/rusty_libimobiledevice", features = [
  "dynamic",
], default-features = false }

idevice = { version = "0.1.29", features = ["full"] }

plist_plus = { version = "0.2", features = ["dynamic"] }
plist = "1"
swift-bridge = { git = "https://github.com/naturecodevoid/swift-bridge" } # TODO: change to official repo once https://github.com/chinedufn/swift-bridge/pull/209 is merged

log = "*"
fern = "0.7"

serde = "1.0"
serde_json = "1.0"

tokio = { version = "1.44", features = ["rt", "rt-multi-thread", "net"] }
once_cell = "1.21.1"


reqwest = { version = "0.12", features = ["blocking"] }
zip = "2.6"
chrono = "0.4"

[dev-dependencies]
env_logger = "0.11"

[build-dependencies]
swift-bridge-build = { git = "https://github.com/naturecodevoid/swift-bridge" } # TODO: change to official repo once https://github.com/chinedufn/swift-bridge/pull/209 is merged

[profile.release]
panic = "abort"

[lib]
crate-type = ["staticlib", "rlib"]
